# embodiment-controllers

./: AGENT_STANDARD.md  BLUETOOTH_ROBOT_QUICKSTART.md  CONTROLLER_STANDARD.md  README.md
embodiments/elecfreaks/cutebot/: controller.py
embodiments/esp32/: IMPLEMENTATION_STATUS.md  README.md
embodiments/esp32/firmware/controller/: Cargo.toml  README.md  build.rs  config.json  rust-toolchain.toml  sdkconfig.defaults
embodiments/esp32/firmware/controller/src/: main.rs
embodiments/esp32/firmware/standalone/: Cargo.toml  README.md  build.rs  config.json  sdkconfig.defaults
embodiments/esp32/firmware/standalone/src/: main.rs
embodiments/microbit/: MICROBIT_BLE_CHECKLIST.md  README.md  agent.py
embodiments/microbit/firmware/: .gitignore  API_VERIFICATION_NEEDED.md  ASYNC_REFACTOR_ANALYSIS.md  ASYNC_REFACTOR_COMPLETE.md  BLE_API_INVESTIGATION.md  BLE_API_VERIFICATION.md  BLE_ARCHITECTURE_CLARIFICATION.md  BLE_BLOCKER_ANALYSIS.md  BLE_COMPATIBILITY_LAYER.md  BLE_COMPAT_IMPLEMENTATION_STATUS.md  BLE_COMPAT_PROGRESS.md  BLE_COMPLETE_IMPLEMENTATION.md  BLE_IMPLEMENTATION_COMPLETE.md  BLE_IMPLEMENTATION_NEXT_STEPS.md  BLE_IMPLEMENTATION_NOTE.md  BLE_IMPLEMENTATION_STATUS.md  BLE_INITIALIZATION_COMPLETE.md  BLE_LIMITATIONS.md  BLE_STACK_COMPARISON.md  BLE_VERSION_MISMATCH.md  Cargo.toml  FLASH_TEST.md  LED_INDICATORS.md  LICENSE  MIGRATION_STATUS.md  NEXT_STEPS.md  OPTION_ANALYSIS.md  PHASE3_BLE_COMPLETE.md  QUICKSTART.md  README.md  RUN_TESTS.md  TESTING_GUIDE.md  TESTING_VERIFICATION_COMPLETE.md  TROUBLE_IMPLEMENTATION_STATUS.md  TROUBLE_INTEGRATION_PLAN.md  UART_CLARIFICATION.md  USB_CDC_COMPLETE.md  USB_CDC_IMPLEMENTATION_PLAN.md  USB_CDC_MIGRATION.md  USB_STATUS.md  (+5 more)
embodiments/microbit/firmware/.cargo/: config.toml
embodiments/microbit/firmware/examples/: blink.rs  test_led.rs
embodiments/microbit/firmware/src/: ble_compat.rs  ble_stack.rs  bluetooth.rs  gpio_controller.rs  led_display.rs  main.rs  main_minimal.rs  protocol.rs  sensors.rs  usb_vbus.rs
embodiments/petoi/bittle/: controller.py  requirements.txt
simulators/mujoco/: generic_controller.py
simulators/mujoco/ant/: README.md  ant.xml  controller.py  requirements.txt
simulators/mujoco/humanoid/: README.md  test_mujoco_only.py
simulators/mujoco/humanoid/examples/humanoid_walking/: README.md
simulators/mujoco/humanoid/media/: README.md
simulators/mujoco/reacher/: README.md  capabilities.json  controller.py  reacher.xml
