[package]
name = "feagi-microbit-controller"
version = "0.1.0"
edition = "2021"
authors = ["FEAGI Team <team@neuraville.com>"]
license = "MIT"
description = "FEAGI controller firmware for BBC micro:bit devices"
repository = "https://github.com/feagi/FEAGI-2.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"
embedded-hal = "1.0"
defmt-rtt = "0.4"  # defmt transport (RTT logging)
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5"
heapless = "0.8"
static_cell = "1.3"

# micro:bit V2 dependencies
# NO features by default - features will be enabled conditionally via transport-ble or transport-usb
microbit-bsp = { version = "0.4", default-features = false }

# Embassy async runtime (always needed for both transports)
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.4", features = ["tick-hz-32_768"] }
defmt = "1.0"  # Required by embassy

# Shared primitives (used by both BLE and USB)
embassy-sync = { version = "0.6", optional = true }

# BLE transport dependencies (optional, only when transport-ble is enabled)
trouble-host = { version = "0.1", features = ["peripheral", "gatt"], optional = true }
embedded-io = { version = "0.6", optional = true }
bt-hci = { version = "0.2", optional = true }
bt-hci-v3 = { package = "bt-hci", version = "0.3", optional = true }
nrf-sdc = { version = "0.1", optional = true }

# USB CDC transport dependencies (optional, only when transport-usb is enabled)
embassy-nrf = { version = "0.4", features = ["nrf52833", "time-driver-rtc1", "gpiote", "unstable-pac"], optional = true }
embassy-usb = { version = "0.4", features = ["defmt"], optional = true }

# Sensor drivers (optional - for future I2C implementation)
[dependencies.lsm303agr]
version = "0.3"
optional = true


[features]
default = ["transport-ble"]

# Transport selection (mutually exclusive)
# transport-ble: Enables BLE via TrouBLE + enables trouble feature in microbit-bsp
# transport-usb: Enables USB CDC + embassy-nrf for USB driver
transport-ble = [
    "microbit-bsp/trouble",  # Enable trouble feature in microbit-bsp
    "microbit-bsp/defmt",    # Enable defmt logging
    "embassy-sync",
    "trouble-host",
    "embedded-io",
    "bt-hci",
    "bt-hci-v3",
    "nrf-sdc"
]
transport-usb = [
    "microbit-bsp/defmt",    # Enable defmt logging
    "embassy-sync",
    "embassy-nrf",
    "embassy-usb"
]

# Build profiles
[profile.dev]
opt-level = "s"      # Optimize for size even in dev
debug = true
lto = false

[profile.release]
opt-level = "z"      # Optimize aggressively for size
debug = false
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols

# Flash size optimization
[profile.release.package."*"]
opt-level = "z"


