[package]
name = "feagi-esp32-controller"
version = "0.1.0"
edition = "2021"
authors = ["FEAGI Team <team@neuraville.com>"]
license = "MIT"
description = "FEAGI controller firmware for ESP32 - I/O interface for remote FEAGI instance"

[[bin]]
name = "feagi-esp32-controller"
path = "src/main.rs"

[dependencies]
# ESP32 HAL
esp-idf-svc = { version = ">=0.49", default-features = false, features = ["binstart", "uart"] }
esp-idf-hal = { version = "0.43", default-features = false, features = ["uart"] }

# Utilities
anyhow = "1.0"
heapless = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.5"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }

[profile.release]
opt-level = "z"      # Optimize aggressively for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Remove debug symbols

[profile.dev]
opt-level = 1        # Some optimization for reasonable performance
debug = true

# ESP32 configuration
[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
esp_idf_version = "v5.1"

[package.metadata.esp-idf]
project_name = "feagi-esp32-controller"
version = "2.0.0"

